<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/new_actionbar_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/actionbar"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <com.rxmediaapp.customfonts.CustomRegularTextView
                android:id="@+id/pat_notfound_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient_not_fund"
                android:gravity="center"
                android:textColor="@color/dark_blue_clr"
                android:textSize="22dp" />



            <com.rxmediaapp.customfonts.CustomEditText
                android:id="@+id/apnmnt_nme_edtx"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:hint="@string/mandatory_name"
                android:inputType="textPersonName"
                android:background="@drawable/edittext_bg"
                android:singleLine="true"
                android:textColor="@color/txt_clr"
                android:textColorHint="@color/hintcolor"/>

            <com.rxmediaapp.customfonts.CustomEditText
                android:id="@+id/apnmnt_email_edtx"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:background="@drawable/edittext_bg"
                android:singleLine="true"
                android:textColor="@color/txt_clr"
                android:textColorHint="@color/hintcolor"/>

            <com.rxmediaapp.customfonts.CustomEditText
                android:id="@+id/apnmnt_mbile_edtx"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14dp"
                android:inputType="number"
                android:layout_marginTop="15dp"
                 android:maxLength="10"
                android:hint="@string/mandatory_mbile_num"
                android:background="@drawable/edittext_bg"
                android:singleLine="true"
                android:textColor="@color/txt_clr"
                android:textColorHint="@color/hintcolor"/>

            <com.rxmediaapp.customfonts.CustomEditText
                android:id="@+id/apnmnt_adhar_edtx"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:inputType="number"
                android:hint="@string/mandatory_aadhar_num"
                android:background="@drawable/edittext_bg"
                android:singleLine="true"
                android:textColor="@color/txt_clr"
                android:textColorHint="@color/hintcolor"/>

            <com.rxmediaapp.customfonts.CustomEditText
                android:id="@+id/apnmnt_dob_edtx"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:editable="false"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:hint="@string/mandatory_dob"
                android:drawableRight="@drawable/calendericon"
                android:background="@drawable/edittext_bg"
                android:singleLine="true"
                android:textColor="@color/txt_clr"
                android:textColorHint="@color/hintcolor"/>

            <com.rxmediaapp.customfonts.CustomEditText
                android:id="@+id/apnmnt_gender_edtx"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:hint="@string/mandatory_gender"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:drawableRight="@drawable/dropdown"
                android:background="@drawable/edittext_bg"
                android:singleLine="true"
                android:textColor="@color/txt_clr"
                android:textColorHint="@color/hintcolor"/>

            <com.rxmediaapp.customfonts.CustomEditText
                android:id="@+id/apnmnt_bldgrup_edtx"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:drawableRight="@drawable/dropdown"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:hint="@string/mandatory_blodd_group"
                android:background="@drawable/edittext_bg"
                android:singleLine="true"
                android:textColor="@color/txt_clr"
                android:textColorHint="@color/hintcolor"/>

            <com.rxmediaapp.customfonts.CustomEditText
                android:id="@+id/apnmnt_password_edtx"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:hint="@string/mandatory_pswd"
                android:background="@drawable/edittext_bg"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="@color/txt_clr"
                android:textColorHint="@color/hintcolor"/>

            <com.rxmediaapp.customfonts.CustomEditText
                android:id="@+id/apnmnt_confirm_pass_edtx"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                android:hint="@string/cnfrm_pswd"
                android:background="@drawable/edittext_bg"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="@color/txt_clr"
                android:textColorHint="@color/hintcolor"/>


            <com.rxmediaapp.customfonts.CustomEditText
                android:id="@+id/apnmnt_cnsltdctr_edtx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:lines="3"
                android:imeOptions="actionDone"
                android:gravity="top|left"
                android:hint="@string/dueto"
                android:background="@drawable/edittext_bg"
                android:textColor="@color/txt_clr"
                android:textColorHint="@color/hintcolor"/>

            <com.rxmediaapp.customfonts.CustomButton
                android:id="@+id/apnmnt_adapntmnt_btn"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:textSize="14dp"
                android:textAllCaps="false"
                android:text="@string/addapp"
                android:textColor="@color/white"
                android:background="@drawable/button_bg_clr"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>