<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/heatbeat"/>

            <com.rxmediaapp.customfonts.CustomRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/slect_option"
                android:textColor="@color/dark_blue_clr"
                android:textSize="24dp" />

            <com.rxmediaapp.customfonts.CustomButton
                android:id="@+id/sgnup_patent_btn"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:textSize="14dp"
                android:textAllCaps="false"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/patient"
                android:textColor="@color/darkgreen_color"
                android:background="@drawable/patient_bg"/>

            <com.rxmediaapp.customfonts.CustomButton
                android:id="@+id/sgnup_hsptl_btn"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:textSize="14dp"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:textAllCaps="false"
                android:text="@string/hospiatal"
                android:textColor="@color/dark_blue_clr"
                android:background="@drawable/hsptl_bg"/>

            <com.rxmediaapp.customfonts.CustomButton
                android:id="@+id/sgnup_indvduldctr_btn"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="14dp"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:textAllCaps="false"
                android:text="@string/individual_doctor"
                android:textColor="@color/white"
                android:background="@drawable/indvdul_dctor_bg"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>